# uteg

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  file.cpp  file.h  general.cpp  general.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
